[package]
name = "day_13"
version = "0.1.0"
authors = ["Maximilian Stock <me@maximumstock.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
intcode = { path = "../intcode" }
rand = "0.7.3"
